# PWP3D

./: .gitignore  CMakeLists.txt  capg2pwp3d.py  fixmask.py
Application/: CMakeLists.txt  PerseusLibTest.cpp
CMakeModules/: FindASSIMP.cmake  FindFreeImage.cmake
Files/CameraCalibration/: Kinect.cal  Y0101.cal
Files/fan/cam/: SJ21.cal  SJ21.rt.txt  SJ22.cal  SJ22.rt.txt  SJ23.cal  SJ23.rt.txt  SJ31.cal  SJ31.rt.txt  SJ32.cal  SJ32.rt.txt  SJ33.cal  SJ33.rt.txt  SJ34.cal  SJ34.rt.txt  SJ41.cal  SJ41.rt.txt  SJ51.cal  SJ51.rt.txt  SJ52.cal  SJ52.rt.txt  SJ53.cal  SJ53.rt.txt  SJ54.cal  SJ54.rt.txt
Files/fan/rt/: SJ21.txt  (+11 more)
PerseusLib/: CMakeLists.txt  PerseusLibTest.cpp  capgdatautils.hpp
PerseusLib/CUDA/: CUDAConvolution.cu  CUDAConvolution.h  CUDADT.cu  CUDADT.h  CUDAData.h  CUDADefines.h  CUDAEF.cu  CUDAEF.h  CUDAEngine.cu  CUDAEngine.h  CUDARenderer.cu  CUDARenderer.h  CUDAScharr.cu  CUDAScharr.h  CUDAUtils.h
PerseusLib/Objects/: HistogramVarBin.h  ImageRender.h  IterationConfiguration.h  Object3D.h  Object3DParams.h  Pose3D.h  StepSize3D.h  View3D.h  View3DParams.h
PerseusLib/Others/: PerseusLibDefines.h
PerseusLib/Primitives/: ImagePerseus.h  PixelUCHAR4.h  Vector2D.h  Vector3D.h  Vector4D.h
PerseusLib/Utils/: Debug.h  FileUtils.cpp  FileUtils.h  HistogramEngine.cpp  HistogramEngine.h  ImageUtils.cpp  ImageUtils.h  MathUtils.cpp  MathUtils.h  VisualisationEngine.cpp
cmake/: ACGCompiler.cmake  FindCereal.cmake  Findjsoncpp.cmake  Findlevmar.cmake  Findmach7.cmake  Findnlopt.cmake  findarmadillo.cmake  findguile.cmake
testcuda/: testcuda.vcxproj
(+28 files in other folders)
